--- a/res/layout/app_notification_view.xml
+++ b/res/layout/app_notification_view.xml
@@ -26,14 +26,14 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:textColor="#f0f0f0"
-        android:background="@color/rank5"
+        android:background="@color/app_principal_bottom"
         android:textSize="20sp"
         android:id="@+id/notification_accept"
         android:layout_above="@+id/notification_author"
         android:layout_centerHorizontal="true" />
 
     <RelativeLayout
-        android:background="@color/rank5"
+        android:background="@color/app_principal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
