--- a/res/layout/loader.xml
+++ b/res/layout/loader.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cc000000">
+    android:background="@color/app_principal_trans">
 
 
     <ImageView
