--- a/res/layout/app_action_bar.xml
+++ b/res/layout/app_action_bar.xml
@@ -4,14 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#99000000"
     android:layout_height="48dp">
 
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/acion_back"
         android:layout_marginLeft="6dp"
         android:src="@drawable/ic_action_back"
         android:layout_centerVertical="true"
@@ -22,31 +21,31 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="6dp"
         android:src="@drawable/ic_action_next"
-        android:id="@+id/imageView2"
+        android:id="@+id/action_next"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true" />
 
     <View
         android:layout_width="1dp"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:layout_marginRight="6dp"
-        android:background="#11f0f0f0"
+        android:background="#55f0f0f0"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/imageView2"
+        android:layout_toLeftOf="@+id/action_next"
         android:id="@+id/imageView3" />
 
     <View
         android:layout_width="1dp"
         android:layout_height="40dp"
         android:layout_marginLeft="6dp"
-        android:background="#11f0f0f0"
+        android:background="#55f0f0f0"
         android:layout_alignTop="@+id/imageView3"
-        android:layout_toRightOf="@+id/imageView" />
+        android:layout_toRightOf="@+id/acion_back" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#11f0f0f0"
+        android:background="#55f0f0f0"
         android:layout_below="@+id/imageView3"
         android:layout_alignParentBottom="true" />
 </RelativeLayout>
