--- a/res/layout/app_category_viewcontroller.xml
+++ b/res/layout/app_category_viewcontroller.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#999999">
+    android:background="@color/app_blue">
 
     <include
         android:layout_width="wrap_content"
