--- a/res/layout/app_preview_viewcontroller.xml
+++ b/res/layout/app_preview_viewcontroller.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/app_preview_viewcontroller_overlay"
-        android:background="#661EBF6C"/>
+        android:background="@color/app_principal_trans"/>
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -45,7 +45,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:textColor="#99f0f0f0"
-        android:background="#1EBF6C"
+        android:background="@color/app_blue"
         android:layout_marginTop="12dp"
         android:layout_below="@+id/app_preview_viewcontroller_avatar"
         android:id="@+id/app_preview_viewcontroller_category"
@@ -54,14 +54,14 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#cc000000"
+        android:background="@color/app_principal"
         android:layout_below="@+id/app_preview_viewcontroller_category"
         android:layout_alignParentLeft="true"
         android:id="@+id/relativeLayout">
 
         <Button
             android:layout_width="match_parent"
-            android:background="#99000000"
+            android:background="@color/app_principal_bottom"
             android:textColor="#f0f0f0"
             android:textSize="20sp"
             android:layout_height="48dp"
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:text="Choose level"
-            android:background="#1EBF6C"
+            android:background="@color/app_pink"
             android:textSize="20sp"
             android:textColor="#f0f0f0"
             android:layout_marginLeft="24dp"
