--- a/res/layout/app_profile_viewcontroller.xml
+++ b/res/layout/app_profile_viewcontroller.xml
@@ -21,7 +21,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#331EBF6C"
+        android:background="@color/app_blue_trans"
         android:id="@+id/app_profile_viewcontroller_overlay" />
 
 
@@ -41,7 +41,7 @@
         android:text="paula.musi"
         android:textSize="20sp"
         android:textColor="#99f0f0f0"
-        android:background="#1EBF6C"
+        android:background="@color/app_blue"
         android:padding="12dp"
         android:layout_marginTop="12dp"
         android:layout_below="@+id/app_profile_viewcontroller_avatar"
@@ -51,14 +51,14 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#cc000000"
+        android:background="@color/app_principal"
         android:layout_below="@+id/app_profile_viewcontroller_username"
         android:layout_alignParentLeft="true"
         android:id="@+id/relativeLayout">
 
         <Button
             android:layout_width="match_parent"
-            android:background="#99000000"
+            android:background="@color/app_principal_bottom"
             android:textColor="#f0f0f0"
             android:textSize="20sp"
             android:layout_height="48dp"
@@ -130,7 +130,7 @@
             android:text="Share on Twitter"
             android:textColor="#f0f0f0"
             android:textSize="20sp"
-            android:background="#1EBF6C"
+            android:background="@color/app_pink"
             android:layout_marginLeft="48dp"
             android:layout_marginRight="48dp"
             android:layout_marginBottom="24dp"
