--- a/res/layout/app_singup_viewcontroller.xml
+++ b/res/layout/app_singup_viewcontroller.xml
@@ -18,7 +18,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#331EBF6C"
+        android:background="@color/app_blue_trans"
         android:id="@+id/app_singup_viewcontroller_overlay" />
 
 
@@ -30,7 +30,7 @@
         android:src="@drawable/profile_avatar"
         app:border_width="2dp"
         app:border_color="#66f0f0f0"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="72dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -41,7 +41,7 @@
         android:textSize="20sp"
         android:gravity="center"
         android:textColor="#99f0f0f0"
-        android:background="#1EBF6C"
+        android:background="@color/app_blue"
         android:layout_marginTop="24dp"
         android:layout_below="@+id/app_singup_viewcontroller_avatar"
         android:id="@+id/app_singup_viewcontroller_div"
@@ -50,14 +50,14 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#ee000000"
+        android:background="@color/app_principal"
         android:layout_below="@+id/app_singup_viewcontroller_div"
         android:layout_alignParentLeft="true">
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#111111"
+            android:layout_height="48dp"
+            android:background="@color/app_principal_bottom"
             android:textColor="#f0f0f0"
             android:textSize="20sp"
             android:text="Confirm"
@@ -224,5 +224,12 @@
 
 
     </RelativeLayout>
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        layout="@layout/app_action_bar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
