--- a/res/layout/app_subcategory_viewcontroller.xml
+++ b/res/layout/app_subcategory_viewcontroller.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#999999"
+    android:background="@color/app_blue"
     android:layout_height="match_parent">
 
     <include
