--- a/res/layout/app_category_cell.xml
+++ b/res/layout/app_category_cell.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_marginTop="6dp"
-        android:scaleType="center"
+        android:scaleType="fitXY"
         android:id="@+id/app_category_cell_image"
         android:src="@drawable/login_blur"/>
 
