--- a/res/layout/app_level_selector.xml
+++ b/res/layout/app_level_selector.xml
@@ -2,112 +2,127 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/app_principal"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="24dp"
+    android:layout_marginTop="24dp"
+    android:layout_marginRight="24dp"
+    android:layout_marginBottom="24dp"
+    android:background="@color/app_pink"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/level_selector_title"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Choose level"
-        android:gravity="center"
-        android:layout_marginTop="60dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:background="@color/app_pink"
-        android:textSize="24sp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:text="Choose level"
         android:textColor="#f0f0f0"
-        android:id="@+id/level_selector_title"
-        android:layout_gravity="center_horizontal" />
+        android:textSize="24sp" />
 
-    <RadioGroup
-        android:id="@+id/level_radio_group"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_below="@+id/level_selector_title"
-        android:layout_alignParentLeft="true">
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#f0f0f0"
-        android:background="@color/app_principal_trans"
-        android:text="Easy\nThis test contains 20 random questions about the selected topic."
-        android:id="@+id/app_selector_optionOne"
-        android:layout_below="@+id/level_selector_title"
-        android:layout_alignParentLeft="true" />
 
-     <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/app_principal_bottom"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_above="@+id/app_selector_optionTwo"
-        android:layout_alignParentLeft="true" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Medium\nThis test contains 20 random questions about the selected topic."
-        android:textColor="#f0f0f0"
-        android:id="@+id/app_selector_optionTwo"
-        android:layout_below="@+id/app_selector_optionOne"
-        android:layout_alignParentLeft="true" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/app_principal_bottom"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_above="@+id/app_selector_optionThree"
-        android:layout_alignParentLeft="true" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hard_level"
-        android:textColor="#f0f0f0"
-        android:id="@+id/app_selector_optionThree"
-        android:layout_below="@+id/app_selector_optionTwo"
-        android:layout_alignParentLeft="true" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/app_principal_bottom"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_below="@+id/app_selector_optionThree"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/radioButton4" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/app_principal_bottom"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_alignTop="@+id/app_selector_optionOne"
-        android:layout_alignParentLeft="true" />
-
-    </RadioGroup>
     <Button
+        android:id="@+id/level_selector_action"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:text="Confirm"
-        android:id="@+id/level_selector_action"
-        android:background="@color/app_principal_bottom"
-        android:textColor="#f0f0f0"
-        android:textSize="20sp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true" />
+        android:background="@color/app_principal_bottom"
+        android:text="Confirm"
+        android:textColor="#f0f0f0"
+        android:textSize="20sp" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/level_selector_title"
+        android:layout_alignParentLeft="true"
+        android:layout_above="@+id/level_selector_action">
 
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:id="@+id/level_selector_radio_group"
+            android:layout_height="wrap_content">
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Very easy"
+            android:textColor="#f0f0f0"
+            android:textSize="18sp"
+            android:id="@+id/app_selector_optionOne" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="24dp"
+                android:background="#44f0f0f0"/>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Easy"
+            android:textColor="#f0f0f0"
+            android:textSize="18sp"
+            android:id="@+id/app_selector_optionTwo" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="24dp"
+                android:background="#44f0f0f0"/>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Normal"
+            android:textColor="#f0f0f0"
+            android:textSize="18sp"
+            android:id="@+id/app_selector_optionThree" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="24dp"
+                android:background="#44f0f0f0"/>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Hard"
+            android:textColor="#f0f0f0"
+            android:textSize="18sp"
+            android:id="@+id/app_selector_optionFour" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="24dp"
+                android:background="#44f0f0f0"/>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="Very hard"
+            android:textColor="#f0f0f0"
+            android:textSize="18sp"
+            android:id="@+id/app_selector_optionFive" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="24dp"
+                android:background="#44f0f0f0"/>
+
+        </RadioGroup>
+    </LinearLayout>
 
 
 </RelativeLayout>
