--- a/res/layout/app_notification_view.xml
+++ b/res/layout/app_notification_view.xml
@@ -4,6 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="#ddffffff"
+    android:layout_marginBottom="24dp"
+    android:layout_marginLeft="24dp"
+    android:layout_marginRight="24dp"
+    android:layout_marginTop="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -43,10 +47,10 @@
         android:layout_above="@+id/notification_accept">
 
         <ImageView
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/notification_image"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="48dp"
             android:src="@drawable/ic_launcher"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
