--- a/res/layout/app_splash_view.xml
+++ b/res/layout/app_splash_view.xml
@@ -5,17 +5,17 @@
     android:orientation="vertical"
     android:id="@+id/background_splash"
     android:layout_width="match_parent"
-    android:background="@drawable/bg_app"
+    android:background="@drawable/bgb"
     android:layout_height="match_parent">
 
     <View
         android:layout_width="match_parent"
-        android:background="@color/rank2"
+        android:background="@color/app_principal_trans"
         android:layout_height="match_parent"/>
 
     <ImageView
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/imageView"
         android:layout_marginTop="96dp"
         android:src="@drawable/ic_launcher"
