--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -27,6 +27,7 @@
     <color name="app_principal_bottom">#303238</color>
     <color name="app_principal">#3d4147</color>
     <color name="app_principal_trans">#994d5059</color>
+    <color name="app_principal_trans_exam">#444d5059</color>
     <color name="app_pink">#CF4858</color>
     <color name="app_blue">#16A79D</color>
     <color name="app_blue_trans">#9916A79D</color>
