--- a/res/layout/app_level_selector.xml
+++ b/res/layout/app_level_selector.xml
@@ -4,13 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="24dp"
-    android:layout_marginTop="24dp"
-    android:layout_marginRight="24dp"
-    android:layout_marginBottom="24dp"
-    android:background="@color/app_pink"
     android:orientation="vertical">
 
+    <View
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:background="@color/app_principal_trans"
+        android:layout_height="match_parent"/>
     <TextView
         android:id="@+id/level_selector_title"
         android:layout_width="match_parent"
