--- a/res/layout/app_question_view.xml
+++ b/res/layout/app_question_view.xml
@@ -2,10 +2,9 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/app_principal_trans"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
 
     <Button
         android:layout_width="wrap_content"
@@ -34,15 +33,16 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/app_principal_trans"
                 android:text="¿Por qué dejaste en blanco una o más preguntas de matemáticas? Llena uno o más óvalos. "
-                android:textSize="20sp"
+                android:textSize="18sp"
+                android:gravity="center"
                 android:padding="12dp"
-                android:textColor="#f0f0f0"
+                android:textColor="@color/app_yellow"
                 android:id="@+id/question_question" />
 
             <RadioGroup
                 android:layout_width="fill_parent"
+                android:background="#11fafafa"
                 android:id="@+id/question_radio_group"
                 android:layout_marginTop="12dp"
                 android:layout_height="fill_parent">
@@ -50,8 +50,8 @@
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textColor="#f0f0f0"
+                    android:textSize="16sp"
+                    android:textColor="#cacaca"
                     android:id="@+id/question_option_one"
                     android:text="Option One Text"/>
 
@@ -64,8 +64,8 @@
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textColor="#f0f0f0"
+                    android:textSize="16sp"
+                    android:textColor="#cacaca"
                     android:id="@+id/question_option_two"
                     android:text="Option One Text"/>
 
@@ -78,8 +78,8 @@
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textColor="#f0f0f0"
+                    android:textSize="16sp"
+                    android:textColor="#cacaca"
                     android:id="@+id/question_option_three"
                     android:text="Option One Text"/>
 
@@ -92,8 +92,8 @@
                 <RadioButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textColor="#f0f0f0"
+                    android:textSize="16sp"
+                    android:textColor="#cacaca"
                     android:id="@+id/question_option_four"
                     android:text="Option One Text"/>
 
@@ -109,10 +109,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:textColor="#f0f0f0"
+                android:textColor="@color/app_blue"
                 android:textSize="16sp"
                 android:layout_marginTop="24dp"
                 android:layout_marginLeft="24dp"
+                android:layout_marginBottom="24dp"
                 android:id="@+id/question_feedback" />
 
             </LinearLayout>
