--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -25,11 +25,12 @@
 
 
     <color name="app_principal_bottom">#303238</color>
+    <color name="app_principal_feed">#303137</color>
     <color name="app_principal">#3d4147</color>
-    <color name="app_principal_trans">#aa4d5059</color>
+    <color name="app_principal_trans">#664d5059</color>
     <color name="app_pink">#CF4858</color>
     <color name="app_blue">#16A79D</color>
-    <color name="app_blue_trans">#9916A79D</color>
+    <color name="app_blue_trans">#6616A79D</color>
     <color name="app_purple">#80628B</color>
     <color name="app_purple_trans">#9980628B</color>
     <color name="app_yellow">#F4AC42</color>
